@@ -1,30 +1,13 @@
 package apptest;
 
-import static org.springframework.http.HttpHeaders.CONTENT_TYPE;
-
-import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Random;
-
-import org.junit.jupiter.api.Assertions;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.github.tomakehurst.wiremock.verification.LoggedRequest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import com.github.tomakehurst.wiremock.verification.LoggedRequest;
-
 import se.sundsvall.byggrarchiver.Application;
 import se.sundsvall.byggrarchiver.api.model.BatchJob;
-import se.sundsvall.byggrarchiver.api.model.enums.ArchiveStatus;
-import se.sundsvall.byggrarchiver.api.model.enums.BatchTrigger;
 import se.sundsvall.byggrarchiver.integration.db.ArchiveHistoryRepository;
 import se.sundsvall.byggrarchiver.integration.db.BatchHistoryRepository;
 import se.sundsvall.byggrarchiver.integration.db.model.ArchiveHistory;
@@ -32,290 +15,315 @@ import se.sundsvall.byggrarchiver.integration.db.model.BatchHistory;
 import se.sundsvall.dept44.test.AbstractAppTest;
 import se.sundsvall.dept44.test.annotation.wiremock.WireMockAppTestSuite;
 
+import java.time.LocalDate;
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.springframework.http.HttpHeaders.CONTENT_TYPE;
+import static org.springframework.http.HttpMethod.GET;
+import static org.springframework.http.HttpMethod.POST;
+import static org.springframework.http.HttpStatus.BAD_REQUEST;
+import static org.springframework.http.HttpStatus.NOT_FOUND;
+import static org.springframework.http.HttpStatus.OK;
+import static org.springframework.http.HttpStatus.SERVICE_UNAVAILABLE;
+import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
+import static se.sundsvall.byggrarchiver.api.model.enums.ArchiveStatus.COMPLETED;
+import static se.sundsvall.byggrarchiver.api.model.enums.ArchiveStatus.NOT_COMPLETED;
+import static se.sundsvall.byggrarchiver.api.model.enums.BatchTrigger.SCHEDULED;
+import static se.sundsvall.byggrarchiver.testutils.TestUtil.randomInt;
+
 @WireMockAppTestSuite(
-	files = "classpath:/IntegrationTest/",
-	classes = Application.class)
+    files = "classpath:/IntegrationTest/",
+    classes = Application.class
+)
 class IntegrationTest extends AbstractAppTest {
 
-	public static final String RESPONSE_JSON = "response.json";
-	private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper()
-		.enable(SerializationFeature.INDENT_OUTPUT)
-		.registerModule(new JavaTimeModule())
-		.configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false);
+    @Autowired
+    private ObjectMapper objectMapper;
 
-	@Autowired
-	private ArchiveHistoryRepository archiveHistoryRepository;
+    @Autowired
+    private ArchiveHistoryRepository archiveHistoryRepository;
 
-	@Autowired
-	private BatchHistoryRepository batchHistoryRepository;
+    @Autowired
+    private BatchHistoryRepository batchHistoryRepository;
 
-	@BeforeEach
-	void beforeEach() {
-		this.wiremock.resetAll();
-		// Clear db between tests
-		archiveHistoryRepository.deleteAll();
-		batchHistoryRepository.deleteAll();
-	}
+    @BeforeEach
+    void beforeEach() {
+        wiremock.resetAll();
 
-	// POST batch and then GET batch history and archive histories - verify that the correct is returned
-	@Test
-	void testStandardPostBatchJob() throws JsonProcessingException, ClassNotFoundException {
-		final BatchJob batchJob = new BatchJob();
-		batchJob.setStart(LocalDate.now().minusDays(1));
-		batchJob.setEnd(LocalDate.now().minusDays(1));
+        // Clear db between tests
+        archiveHistoryRepository.deleteAll();
+        batchHistoryRepository.deleteAll();
+    }
 
-		// POST batchJob
-		final var postBatchHistory = postBatchJob(batchJob);
+    // POST batch and then GET batch history and archive histories - verify that the correct is returned
+    @Test
+    void test01_standardPostBatchJob() throws JsonProcessingException, ClassNotFoundException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now().minusDays(1))
+            .withEnd(LocalDate.now().minusDays(1))
+            .build();
 
-		// GET batchJob
-		final List<BatchHistory> postBatchHistoryList = Arrays.asList(
-			setupCall()
-				.withHttpMethod(HttpMethod.GET)
-				.withServicePath("/batch-jobs")
-				.withExpectedResponseStatus(HttpStatus.OK)
-				.sendRequestAndVerifyResponse()
-				.andReturnBody(BatchHistory[].class));
+        // POST batchJob
+        var postBatchHistory = postBatchJob(batchJob);
 
-		Assertions.assertTrue(postBatchHistoryList.contains(postBatchHistory));
+        // GET batchJob
+        var postBatchHistoryList = List.of(
+            setupCall()
+                .withHttpMethod(GET)
+                .withServicePath("/batch-jobs")
+                .withExpectedResponseStatus(OK)
+                .sendRequestAndVerifyResponse()
+                .andReturnBody(BatchHistory[].class));
 
-		// GET archiveHistoryb
-		final List<ArchiveHistory> getArchiveHistoryList = Arrays.asList(
-			setupCall()
-				.withHttpMethod(HttpMethod.GET)
-				.withServicePath("/archived/attachments?batchHistoryId=" + postBatchHistory.getId())
-				.withExpectedResponseStatus(HttpStatus.OK)
-				.sendRequestAndVerifyResponse()
-				.andReturnBody(ArchiveHistory[].class));
+        assertThat(postBatchHistoryList).contains(postBatchHistory);
 
-		// GET archiveHistory with status COMPLETED
-		final List<ArchiveHistory> getArchiveHistoryListCompleted = Arrays.asList(
-			setupCall()
-				.withHttpMethod(HttpMethod.GET)
-				.withServicePath("/archived/attachments?status=" + ArchiveStatus.COMPLETED)
-				.withExpectedResponseStatus(HttpStatus.OK)
-				.sendRequestAndVerifyResponse()
-				.andReturnBody(ArchiveHistory[].class));
+        // GET archiveHistoryb
+        var getArchiveHistoryList = List.of(
+            setupCall()
+                .withHttpMethod(GET)
+                .withServicePath("/archived/attachments?batchHistoryId=" + postBatchHistory.getId())
+                .withExpectedResponseStatus(OK)
+                .sendRequestAndVerifyResponse()
+                .andReturnBody(ArchiveHistory[].class));
 
-		Assertions.assertEquals(getArchiveHistoryList, getArchiveHistoryListCompleted);
-		getArchiveHistoryList.forEach(ah -> Assertions.assertEquals(postBatchHistory, ah.getBatchHistory()));
-		getArchiveHistoryList.forEach(ah -> Assertions.assertEquals(ArchiveStatus.COMPLETED, ah.getArchiveStatus()));
-		Assertions.assertEquals(archiveHistoryRepository.getArchiveHistoriesByBatchHistoryId(postBatchHistory.getId()), getArchiveHistoryList);
-	}
+        // GET archiveHistory with status COMPLETED
+        var getArchiveHistoryListCompleted = List.of(
+            setupCall()
+                .withHttpMethod(GET)
+                .withServicePath("/archived/attachments?status=" + COMPLETED)
+                .withExpectedResponseStatus(OK)
+                .sendRequestAndVerifyResponse()
+                .andReturnBody(ArchiveHistory[].class));
 
-	// POST batch and then GET batch history and archive histories - verify that the correct is returned
-	@Test
-	void testStandardPostBatchJobZeroArchivedDocs() throws JsonProcessingException, ClassNotFoundException {
-		final BatchJob batchJob = new BatchJob();
-		batchJob.setStart(LocalDate.parse("2021-01-01"));
-		batchJob.setEnd(LocalDate.parse("2021-01-01"));
+        assertThat(getArchiveHistoryList).isEqualTo(getArchiveHistoryListCompleted).allSatisfy(archiveHistory -> {
+            assertThat(archiveHistory.getBatchHistory()).isEqualTo(postBatchHistory);
+            assertThat(archiveHistory.getArchiveStatus()).isEqualTo(COMPLETED);
+        });
+        assertThat(archiveHistoryRepository.getArchiveHistoriesByBatchHistoryId(postBatchHistory.getId())).isEqualTo(getArchiveHistoryList);
+    }
 
-		// POST batchJob
-		final var postBatchHistory = postBatchJob(batchJob);
+    // POST batch and then GET batch history and archive histories - verify that the correct is returned
+    @Test
+    void test02_standardPostBatchJob_zeroArchivedDocs() throws JsonProcessingException, ClassNotFoundException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.parse("2021-01-01"))
+            .withEnd(LocalDate.parse("2021-01-01"))
+            .build();
 
-		// GET archiveHistory
-		setupCall()
-			.withHttpMethod(HttpMethod.GET)
-			.withServicePath("/archived/attachments?batchHistoryId=" + postBatchHistory.getId())
-			.withExpectedResponseStatus(HttpStatus.NOT_FOUND)
-			.withExpectedResponse(RESPONSE_JSON)
-			.sendRequestAndVerifyResponse();
-	}
+        // POST batchJob
+        var postBatchHistory = postBatchJob(batchJob);
 
-	@Test
-	void testGetBatchHistoryNotFound() {
-		setupCall()
-			.withHttpMethod(HttpMethod.GET)
-			.withServicePath("/batch-jobs")
-			.withExpectedResponseStatus(HttpStatus.NOT_FOUND)
-			.withExpectedResponse(RESPONSE_JSON)
-			.sendRequestAndVerifyResponse();
-	}
+        // GET archiveHistory
+        setupCall()
+            .withHttpMethod(GET)
+            .withServicePath("/archived/attachments?batchHistoryId=" + postBatchHistory.getId())
+            .withExpectedResponseStatus(NOT_FOUND)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
+    }
 
-	// Rerun an earlier batch
-	@Test
-	void testRerun() {
+    @Test
+    void test03_standardPostBatchJobNullDate() throws JsonProcessingException {
+        var batchJob = new BatchJob();
 
-		final BatchHistory batchHistory = new BatchHistory();
-		batchHistory.setArchiveStatus(ArchiveStatus.NOT_COMPLETED);
-		batchHistory.setStart(LocalDate.now().minusDays(2));
-		batchHistory.setEnd(LocalDate.now());
-		batchHistory.setBatchTrigger(BatchTrigger.SCHEDULED);
+        setupCall()
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
+    }
 
-		batchHistoryRepository.save(batchHistory);
+    @Test
+    void test04_getBatchHistoryNotFound() {
+        setupCall()
+            .withHttpMethod(GET)
+            .withServicePath("/batch-jobs")
+            .withExpectedResponseStatus(NOT_FOUND)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
+    }
 
-		// POST rerun
-		setupCall()
-			.withHttpMethod(HttpMethod.POST)
-			.withServicePath("/batch-jobs/" + batchHistory.getId() + "/rerun")
-			.withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-			.withExpectedResponseStatus(HttpStatus.OK)
-			.sendRequestAndVerifyResponse();
+    // Rerun an earlier batch
+    @Test
+    void test05_rerun() {
+        var batchHistory = BatchHistory.builder()
+            .withArchiveStatus(NOT_COMPLETED)
+            .withStart(LocalDate.now().minusDays(2))
+            .withEnd(LocalDate.now())
+            .withBatchTrigger(SCHEDULED)
+            .build();
 
-	}
+        batchHistoryRepository.save(batchHistory);
 
-	// Rerun an earlier completed batch - verify it did not run
-	@Test
-	void testRerunWithCompletedBatch() throws JsonProcessingException, ClassNotFoundException {
+        // POST rerun
+        setupCall()
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs/" + batchHistory.getId() + "/rerun")
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(OK)
+            .sendRequestAndVerifyResponse();
+    }
 
-		final BatchJob batchJob = new BatchJob();
-		batchJob.setStart(LocalDate.now().minusDays(1));
-		batchJob.setEnd(LocalDate.now().minusDays(1));
+    // Rerun an earlier completed batch - verify it did not run
+    @Test
+    void test06_rerunWithCompletedBatch() throws JsonProcessingException, ClassNotFoundException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now().minusDays(1))
+            .withEnd(LocalDate.now().minusDays(1))
+            .build();
 
-		// POST batchJob
-		final BatchHistory postBatchHistoryList = postBatchJob(batchJob);
+        // POST batchJob
+        var postBatchHistoryList = postBatchJob(batchJob);
 
-		Assertions.assertEquals(ArchiveStatus.COMPLETED, postBatchHistoryList.getArchiveStatus());
+        assertThat(postBatchHistoryList.getArchiveStatus()).isEqualTo(COMPLETED);
 
-		// POST rerun
-		setupCall()
-			.withHttpMethod(HttpMethod.POST)
-			.withServicePath("/batch-jobs/" + postBatchHistoryList.getId() + "/rerun")
-			.withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-			.withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-			.withExpectedResponse(RESPONSE_JSON)
-			.sendRequestAndVerifyResponse();
-	}
+        // POST rerun
+        setupCall()
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs/" + postBatchHistoryList.getId() + "/rerun")
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
+    }
 
-	// Rerun a non-existing batch
-	@Test
-	void testRerunNonExistingBatch() {
-		final int randomNumber = new Random().nextInt(999999);
+    // Rerun a non-existing batch
+    @Test
+    void test07_rerunNonExistingBatch() {
+        var randomNumber = randomInt(999999);
 
-		// POST rerun
-		setupCall()
-			.withHttpMethod(HttpMethod.POST)
-			.withServicePath("/batch-jobs/" + randomNumber + "/rerun")
-			.withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-			.withExpectedResponseStatus(HttpStatus.NOT_FOUND)
-			.withExpectedResponse(RESPONSE_JSON)
-			.sendRequestAndVerifyResponse();
-	}
+        // POST rerun
+        setupCall()
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs/" + randomNumber + "/rerun")
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(NOT_FOUND)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
+    }
 
-	// Try to run batch with start today and end tomorrow
-	@Test
-	void testRunBatchForFutureDateV1() throws JsonProcessingException {
-		final BatchJob batchJob = new BatchJob();
-		batchJob.setStart(LocalDate.now());
-		batchJob.setEnd(LocalDate.now().plusDays(1));
+    // Try to run batch with start today and end tomorrow
+    @Test
+    void test08_runBatchForFutureDateV1() throws JsonProcessingException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now())
+            .withEnd(LocalDate.now().plusDays(1))
+            .build();
 
-		setupCall()
-			.withHttpMethod(HttpMethod.POST)
-			.withServicePath("/batch-jobs")
-			.withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-			.withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-			.withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-			.withExpectedResponse(RESPONSE_JSON)
-			.sendRequestAndVerifyResponse();
-	}
+        setupCall()
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
+    }
 
-	// Try to run batch with start and end tomorrow
-	@Test
-	void testRunBatchForFutureDateV2() throws JsonProcessingException {
-		final BatchJob batchJob = new BatchJob();
-		batchJob.setStart(LocalDate.now().plusDays(1));
-		batchJob.setEnd(LocalDate.now().plusDays(1));
+    // Try to run batch with start and end tomorrow
+    @Test
+    void test09_runBatchForFutureDateV2() throws JsonProcessingException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now().plusDays(1))
+            .withEnd(LocalDate.now().plusDays(1))
+            .build();
 
-		setupCall()
-			.withHttpMethod(HttpMethod.POST)
-			.withServicePath("/batch-jobs")
-			.withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-			.withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-			.withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-			.withExpectedResponse(RESPONSE_JSON)
-			.sendRequestAndVerifyResponse();
-	}
+        setupCall()
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
+    }
 
-	// Try to run batch with start date later than end date
-	@Test
-	void testRunBatchWithEndBeforeStart() throws JsonProcessingException {
-		final BatchJob batchJob = new BatchJob();
-		batchJob.setStart(LocalDate.now().minusDays(1));
-		batchJob.setEnd(LocalDate.now().minusDays(2));
+    // Try to run batch with start date later than end date
+    @Test
+    void test10_runBatchWithEndBeforeStart() throws JsonProcessingException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.now().minusDays(1))
+            .withEnd(LocalDate.now().minusDays(2))
+            .build();
 
-		setupCall()
-			.withHttpMethod(HttpMethod.POST)
-			.withServicePath("/batch-jobs")
-			.withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-			.withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-			.withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-			.withExpectedResponse(RESPONSE_JSON)
-			.sendRequestAndVerifyResponse();
-	}
+        setupCall()
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(BAD_REQUEST)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
+    }
 
-	@Test
-	void testStandardPostBatchJobNullDate() throws JsonProcessingException {
-		final BatchJob batchJob = new BatchJob();
+    // Test exception from GetUpdatedArenden - Should return http 500
+    @Test
+    void test11_errorFromGetUpdatedArenden() throws JsonProcessingException {
+        var batchJob = BatchJob.builder()
+            .withStart(LocalDate.parse("1999-01-01"))
+            .withEnd(LocalDate.parse("1999-01-01"))
+            .build();
 
-		setupCall()
-			.withHttpMethod(HttpMethod.POST)
-			.withServicePath("/batch-jobs")
-			.withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-			.withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-			.withExpectedResponseStatus(HttpStatus.BAD_REQUEST)
-			.withExpectedResponse(RESPONSE_JSON)
-			.sendRequestAndVerifyResponse();
-	}
+        setupCall()
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(SERVICE_UNAVAILABLE)
+            .withExpectedResponse("response.json")
+            .sendRequestAndVerifyResponse();
 
-	// Test exception from GetUpdatedArenden - Should return http 500
-	@Test
-	void testErrorFromGetUpdatedArenden() throws JsonProcessingException {
-		final BatchJob batchJob = new BatchJob();
-		batchJob.setStart(LocalDate.parse("1999-01-01"));
-		batchJob.setEnd(LocalDate.parse("1999-01-01"));
+        setupCall()
+            .withHttpMethod(GET)
+            .withServicePath("/archived/attachments")
+            .withExpectedResponseStatus(NOT_FOUND)
+            .withExpectedResponse("response2.json")
+            .sendRequestAndVerifyResponse();
+    }
 
-		setupCall()
-			.withHttpMethod(HttpMethod.POST)
-			.withServicePath("/batch-jobs")
-			.withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-			.withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-			.withExpectedResponseStatus(HttpStatus.SERVICE_UNAVAILABLE)
-			.withExpectedResponse(RESPONSE_JSON)
-			.sendRequestAndVerifyResponse();
+    //
+    @Test
+    void test12_missingExtension() throws JsonProcessingException, ClassNotFoundException {
+        postBatchJob(BatchJob.builder()
+            .withStart(LocalDate.now())
+            .withEnd(LocalDate.now())
+            .build());
+    }
 
-		setupCall()
-			.withHttpMethod(HttpMethod.GET)
-			.withServicePath("/archived/attachments")
-			.withExpectedResponseStatus(HttpStatus.NOT_FOUND)
-			.withExpectedResponse("response2.json")
-			.sendRequestAndVerifyResponse();
-	}
+    @Test
+    void test13_extensionError() throws JsonProcessingException, ClassNotFoundException {
+        postBatchJob(BatchJob.builder()
+            .withStart(LocalDate.now())
+            .withEnd(LocalDate.now())
+            .build());
+    }
 
-	//
-	@Test
-	void testMissingExtension() throws JsonProcessingException, ClassNotFoundException {
-		postBatchJob(BatchJob.builder()
-			.start(LocalDate.now())
-			.end(LocalDate.now())
-			.build());
-	}
+    private BatchHistory postBatchJob(BatchJob batchJob) throws JsonProcessingException, ClassNotFoundException {
+        return setupCall()
+            .withHttpMethod(POST)
+            .withServicePath("/batch-jobs")
+            .withRequest(objectMapper.writeValueAsString(batchJob))
+            .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+            .withExpectedResponseStatus(OK)
+            .sendRequestAndVerifyResponse()
+            .andReturnBody(BatchHistory.class);
+    }
 
-	@Test
-	void testExtensionError() throws JsonProcessingException, ClassNotFoundException {
-		postBatchJob(BatchJob.builder()
-			.start(LocalDate.now())
-			.end(LocalDate.now())
-			.build());
-	}
+    @Override
+    public boolean verifyAllStubs() {
+        var unmatchedRequests = wiremock.findAllUnmatchedRequests();
+        if (!unmatchedRequests.isEmpty()) {
+            var unmatchedUrls = unmatchedRequests.stream()
+                .map(LoggedRequest::getUrl)
+                .toList();
 
-	private BatchHistory postBatchJob(BatchJob batchJob) throws JsonProcessingException, ClassNotFoundException {
-		return setupCall()
-			.withHttpMethod(HttpMethod.POST)
-			.withServicePath("/batch-jobs")
-			.withRequest(OBJECT_MAPPER.writeValueAsString(batchJob))
-			.withHeader(CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-			.withExpectedResponseStatus(HttpStatus.OK)
-			.sendRequestAndVerifyResponse()
-			.andReturnBody(BatchHistory.class);
-	}
+            throw new AssertionError(String.format("The following requests was not matched: %s", unmatchedUrls));
+        }
 
-	@Override
-	public boolean verifyAllStubs() {
-		final List<LoggedRequest> unmatchedRequests = this.wiremock.findAllUnmatchedRequests();
-		if (!unmatchedRequests.isEmpty()) {
-			final List<String> unmatchedUrls = unmatchedRequests.stream().map(LoggedRequest::getUrl).toList();
-			throw new AssertionError(String.format("The following requests was not matched: %s", unmatchedUrls));
-		}
-
-		return true;
-	}
+        return true;
+    }
 }
